syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/location";
option java_package = "ru.yandex.alice.protos.data.location";
option java_outer_classname = "Group";

import "alice/protos/data/device/info.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TUserGroup {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
    EUserDeviceType Type = 3 [json_name = "type", (NYT.column_name) = "type"];
    repeated string Aliases = 4 [json_name = "aliases", (NYT.column_name) = "aliases"];
    string HouseholdId = 5 [json_name = "household_id", (NYT.column_name) = "household_id"];

    string AnalyticsType = 6 [json_name = "analytics_type", (NYT.column_name) = "analytics_type"];
    string AnalyticsName = 7 [json_name = "analytics_name", (NYT.column_name) = "analytics_name"];

    TUserSharingInfo SharingInfo = 8 [json_name = "sharing_info", (NYT.column_name) = "sharing_info"];
}
